// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with an image 1`] = `
<img
  className="is-loading"
  src="https://twitter.com"
/>
`;

exports[`renders correctly without an image 1`] = `
<img
  className="is-loading"
  src={undefined}
/>
`;
